Fix volume slider styling on Firefox

--- a/src/components/VolumeControl/volume-control.module.css
+++ b/src/components/VolumeControl/volume-control.module.css
@@ -22,6 +22,7 @@
   height: 40px;
   overflow: hidden;
   width: 0;
+  background-color: white;
   transition: width 250ms cubic-bezier(0.645, 0.045, 0.355, 1);
 
   &::after {
@@ -47,6 +48,10 @@
   outline: none;
 }
 
+.slider::-moz-focus-outer {
+  border: 0;
+}
+
 .slider::-webkit-slider-runnable-track {
   width: 100%;
   height: 6px;
@@ -59,7 +64,7 @@
   border: 2px solid var(--greenBodyText);
   height: 20px;
   width: 20px;
-  border-radius: 10px;
+  border-radius: 50%;
   background: var(--greenWash);
   cursor: pointer;
   -webkit-appearance: none;
@@ -78,7 +83,7 @@
   border: 2px solid var(--greenBodyText);
   height: 20px;
   width: 20px;
-  border-radius: 10px;
+  border-radius: 50%;
   background: var(--greenWash);
   cursor: pointer;
 }
@@ -106,7 +111,7 @@
   border: 2px solid var(--greenBodyText);
   height: 20px;
   width: 20px;
-  border-radius: 10px;
+  border-radius: 50%;
   background: var(--greenWash);
   cursor: pointer;
   height: 6px;
